Fixes IE10 bug where long text causes an overflow of speech-bubble

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ article {
 					}
 				}
 		#chat li p {
+			max-width: 40em;
 			margin: 0;
 			line-height: 1.6;
 		}
